--- a/FVE/src/main/resources/backend/index.html
+++ b/FVE/src/main/resources/backend/index.html
@@ -311,7 +311,7 @@
                   },
                   {
                     id: '4',
-                    name: '菜品管理',
+                    name: '商品管理',
                     url: 'page/food/list.html',
                     icon: 'icon-food'
                   },
